frontend/test/should_pass/modalt2.gm
using modbase;

node class Bar extends Common
{
	bar : boolean;
}
