frontend/test/should_fail/computations_no_assign_func_method3.gm
node class N
{
	function bar() : boolean
	{
		this.visited[0] = true;
		return(this.visited[0]);
	}
}
